Change title tag.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
 
-        <title>Daniel Samuels</title>
+        <title>Daniel Samuels - Software Developer based in Cambridge</title>
 
         <link rel="stylesheet" href="static/css/normalize.css">
         <link rel="stylesheet" href="static/css/screen.css">
