--- a/words/index.html
+++ b/words/index.html
@@ -5,7 +5,8 @@ layout: listing
 <ul>
   {% for post in site.posts %}
     <li>
-      <a href="{{ post.url }}">{{ post.title }}</a> - {{ post.date | date_to_long_string }}
+      <small>{{ post.date | date_to_long_string }}</small><br>
+      <a href="{{ post.url }}">{{ post.title }}</a>
     </li>
   {% endfor %}
 </ul>
